--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -54,7 +54,9 @@ body{
 	padding-right: 510px !important;
 	font-size: 22px !important;
 }
-
+.navbar-light .navbar-nav .nav-link{
+	color: rgb(37, 42, 48);
+}
 .navbar-brand{
 	margin-right: 0px;
 	transition: all 250ms;
