--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,6 +74,9 @@ body {
   100% {
     opacity: 100%; } }
 
+p {
+  margin-bottom: 0 !important; }
+
 .textshadow {
   text-shadow: -3px 3px black; }
 
@@ -530,4 +533,66 @@ dl, ol, ul {
   .contenedor {
     margin: 10px; }
     .contenedor .titulo {
-      padding: 25px 25px 0px 25px; } }
+      padding: 25px 25px 0px 25px; }
+  .menuGrid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 2fr);
+    /*grid-template-areas:
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	". . . . comidas comidas comidas comidas comidas comidas"
+	". . . . comidas comidas comidas comidas comidas comidas"
+	;*/
+    min-height: 100vh;
+    padding: 0px 0px 0px 0px; }
+  .localesGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 2fr);
+    min-height: 400px;
+    padding: 25px 10px 0px 25px;
+    text-align: center; }
+  .nombreLocal {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .direccionLocal {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .mapsLocal {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    align-self: center;
+    transition: all 250ms;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .mapsLocal a {
+      color: #f0cccc; }
+    .mapsLocal:hover {
+      transform: scale(1.1); }
+  .imagenLocal__img {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    background-position: center;
+    background-size: cover;
+    box-sizing: border-box;
+    border: 3px solid #f0cccc;
+    transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
+    height: 100%; } }
