--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,7 +19,9 @@ body{
 		opacity: 100%;
 	}
 }
-
+p{
+	margin-bottom: 0 !important;
+}
 .textshadow{
 	text-shadow: -3px 3px black;
 }
@@ -627,12 +629,85 @@ dl, ol, ul{
 	}
 }
 
+
 @media all and (max-width: 768px){
 	.contenedor{
 		margin: 10px;
 		.titulo{
 			padding: 25px 25px 0px 25px;
 		}
+	}
+
+		.menuGrid{
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-rows: repeat(3, 2fr);
+	/*grid-template-areas:
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
+	". . . . comidas comidas comidas comidas comidas comidas"
+	". . . . comidas comidas comidas comidas comidas comidas"
+	;*/
+	min-height: 100vh;
+	padding: 0px 0px 0px 0px;
+	}
+	
+	.localesGrid{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(4, 2fr);
+	min-height: 400px;
+	padding: 25px 10px 0px 25px;
+	text-align: center;
+	}
+	.nombreLocal{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	}
+	.direccionLocal{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 4;
+	grid-row-end: 5;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	}
+	.mapsLocal{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 4;
+	grid-row-end: 5;
+	align-self: center;
+	transition: all 250ms;
+		a{
+			color: #f0cccc;
+		}
+		&:hover{
+			transform: scale(1.1);
+		}
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	}
+	.imagenLocal__img{
+	grid-column-start:1;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 4;
+	background-position: center;
+	background-size: cover;
+	box-sizing: border-box;
+	border: 3px solid #f0cccc;
+	transition: all 250ms cubic-bezier(.65,.05,.36,1);
+	height: 100%;
 	}
 }
 
