--- a/css/estilos.css
+++ b/css/estilos.css
@@ -204,7 +204,8 @@ main div a img {
     .contenedor .nosotros__texto.nosotros__texto--text {
       font-size: 18px;
       padding-left: 10%;
-      padding-right: 10%; }
+      padding-right: 10%;
+      padding: 0 10% 20px 10%; }
   .contenedor .localesGrid .locales__texto {
     font-size: 20px; }
     .contenedor .localesGrid .locales__texto.locales__texto--title {
@@ -577,14 +578,9 @@ dl, ol, ul {
     grid-row-start: 4;
     grid-row-end: 5;
     align-self: center;
-    transition: all 250ms;
     display: flex;
     justify-content: center;
     align-items: center; }
-    .mapsLocal a {
-      color: #f0cccc; }
-    .mapsLocal:hover {
-      transform: scale(1.1); }
   .imagenLocal__img {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -595,4 +591,6 @@ dl, ol, ul {
     box-sizing: border-box;
     border: 3px solid #f0cccc;
     transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
-    height: 100%; } }
+    height: 100%; }
+    .imagenLocal__img:hover {
+      transform: scale(1.1); } }
