--- a/css/estilos.css
+++ b/css/estilos.css
@@ -535,10 +535,10 @@ dl, ol, ul {
     margin: 10px; }
     .contenedor .titulo {
       padding: 25px 25px 0px 25px; }
-  .menuGrid {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(3, 2fr);
-    /*grid-template-areas:
+  /*.menuGrid{
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-rows: repeat(3, 2fr);
+	grid-template-areas:
 	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
 	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
 	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
@@ -546,9 +546,10 @@ dl, ol, ul {
 	"seleccion seleccion seleccion . comidas comidas comidas comidas comidas comidas"
 	". . . . comidas comidas comidas comidas comidas comidas"
 	". . . . comidas comidas comidas comidas comidas comidas"
-	;*/
-    min-height: 100vh;
-    padding: 0px 0px 0px 0px; }
+	;
+	min-height: 100vh;
+	padding: 0px 0px 0px 0px;
+	}*/
   .localesGrid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -593,4 +594,10 @@ dl, ol, ul {
     transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
     height: 100%; }
     .imagenLocal__img:hover {
-      transform: scale(1.1); } }
+      transform: scale(1.1); }
+  #footer {
+    padding: 20px 0 20px 20px; }
+    #footer .footerButtons ul li {
+      padding: 3px 0px 3px 0px; }
+    #footer .redes {
+      padding-top: 12px; } }
