Responsive preguntas_frecuentes.html y contacto.html

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -342,51 +342,47 @@ main div a img {
   min-height: 400px;
   padding: 0px 50px 50px 50px;
   text-align: center; }
-
-.nombreLocal {
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-.direccionLocal {
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  align-self: center; }
-
-.mapsLocal {
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  align-self: center;
-  transition: all 250ms; }
-  .mapsLocal a {
-    color: #f0cccc; }
-  .mapsLocal:hover {
-    transform: scale(1.1); }
-
-.imagenLocal__img {
-  grid-column-start: 6;
-  grid-column-end: 10;
-  grid-row-start: 2;
-  grid-row-end: 5;
-  background-position: center;
-  background-size: cover;
-  box-sizing: border-box;
-  border: 3px solid #f0cccc;
-  transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
-  height: 100%; }
-  .imagenLocal__img.imagenLocal__img--1 {
-    background-image: url(../media/bar1.jpg); }
-  .imagenLocal__img.imagenLocal__img--2 {
-    background-image: url(../media/bar2.jpg); }
-  .imagenLocal__img.imagenLocal__img--3 {
-    background-image: url(../media/bar3.jpg); }
-  .imagenLocal__img:hover {
-    transform: scale(1.8) translate(-130px); }
+  .localesGrid .nombreLocal {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3; }
+  .localesGrid .direccionLocal {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    align-self: center; }
+  .localesGrid .mapsLocal {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    align-self: center;
+    transition: all 250ms; }
+    .localesGrid .mapsLocal a {
+      color: #f0cccc; }
+    .localesGrid .mapsLocal:hover {
+      transform: scale(1.1); }
+  .localesGrid .imagenLocal__img {
+    grid-column-start: 6;
+    grid-column-end: 10;
+    grid-row-start: 2;
+    grid-row-end: 5;
+    background-position: center;
+    background-size: cover;
+    box-sizing: border-box;
+    border: 3px solid #f0cccc;
+    transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
+    height: 100%; }
+    .localesGrid .imagenLocal__img.imagenLocal__img--1 {
+      background-image: url(../media/bar1.jpg); }
+    .localesGrid .imagenLocal__img.imagenLocal__img--2 {
+      background-image: url(../media/bar2.jpg); }
+    .localesGrid .imagenLocal__img.imagenLocal__img--3 {
+      background-image: url(../media/bar3.jpg); }
+    .localesGrid .imagenLocal__img:hover {
+      transform: scale(1.8) translate(-130px); }
 
 /**/
 /*Contacto*/
@@ -505,8 +501,14 @@ dl, ol, ul {
     font-size: 0.7rem !important; }
   .contenedor .nosotros__texto.nosotros__texto--title {
     font-size: 1rem !important; }
-  .contenedorImg img {
+  .contenedor .contenedorImg img {
     max-width: 325px; }
+  .contenedor .formulario {
+    width: 95%; }
+    .contenedor .formulario .field {
+      width: 100%; }
+    .contenedor .formulario .btn {
+      width: 100%; }
   .redes {
     width: 45%; } }
 
@@ -515,20 +517,24 @@ dl, ol, ul {
     font-size: 0.95rem; }
   .navbar-expand-lg .navbar-collapse {
     padding-left: 17px !important; }
-  .noticias .noticia__texto.noticia__texto--text {
-    font-size: 0.9rem !important; }
-  .noticias .noticia__texto.noticia__texto--title {
-    font-size: 1rem !important; }
   .contenedor .titulo {
     font-size: 65px; }
+  .contenedor .noticias .noticia__texto.noticia__texto--text {
+    font-size: 0.9rem !important; }
+  .contenedor .noticias .noticia__texto.noticia__texto--title {
+    font-size: 1rem !important; }
+  .contenedor .localesGrid .direccionLocal.locales__texto.locales__texto--text {
+    font-size: 1.2rem; }
+  .contenedor .localesGrid .mapsLocal.locales__texto.locales__texto--text {
+    font-size: 1.1rem; }
   .contenedor .nosotros__texto.nosotros__texto--text {
     font-size: 0.8rem !important; }
   .contenedor .nosotros__texto.nosotros__texto--title {
     font-size: 1rem !important; }
+  .contenedor .contenedorImg img {
+    max-width: 425px; }
   .redes {
-    width: 74%; }
-  .contenedorImg img {
-    max-width: 425px; } }
+    width: 74%; } }
 
 @media all and (max-width: 768px) {
   .contenedor {
@@ -557,44 +563,44 @@ dl, ol, ul {
     min-height: 400px;
     padding: 10px 20px 10px 20px;
     text-align: center; }
-  .nombreLocal {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .direccionLocal {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 4;
-    grid-row-end: 5;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .mapsLocal {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 4;
-    grid-row-end: 5;
-    align-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .imagenLocal__img {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 4;
-    background-position: center;
-    background-size: cover;
-    box-sizing: border-box;
-    border: 3px solid #f0cccc;
-    transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
-    height: 100%; }
-    .imagenLocal__img:hover {
-      transform: scale(1.1); }
+    .localesGrid .nombreLocal {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 1;
+      grid-row-end: 2;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .localesGrid .direccionLocal {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 4;
+      grid-row-end: 5;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .localesGrid .mapsLocal {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 4;
+      grid-row-end: 5;
+      align-self: center;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .localesGrid .imagenLocal__img {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 2;
+      grid-row-end: 4;
+      background-position: center;
+      background-size: cover;
+      box-sizing: border-box;
+      border: 3px solid #f0cccc;
+      transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
+      height: 100%; }
+      .localesGrid .imagenLocal__img:hover {
+        transform: scale(1.06); }
   #footer {
     padding: 20px 0 20px 20px; }
     #footer .footerButtons ul li {
