--- a/css/estilos.css
+++ b/css/estilos.css
@@ -224,7 +224,7 @@ main div a img {
 /*Grid Menu*/
 .seleccionMenuGrid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(1, 1fr);
   min-height: 65px;
   margin: -15px 50px 0px 50px;
@@ -238,97 +238,98 @@ main div a img {
     text-decoration: none;
     transition: all 250ms; }
     .seleccionMenuGrid a:hover {
-      transform: scale(1.2); }
+      transform: scale(1.1);
+      color: white; }
 
 .menuGrid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(12, 10fr);
-  height: 150vh;
-  padding: 0px 0px 0px 0px;
-  margin: 100px 50px 20px 50px;
-  background-color: #a45d5d; }
+  grid-template-rows: repeat(15, 10fr);
+  grid-row-gap: 0px;
+  grid-column-gap: 60px;
+  height: 200vh;
+  padding: 60px 60px 0px 60px;
+  margin: 45px 50px 50px 50px;
+  background-color: #a45d5d;
+  border: 2px solid black;
+  border-radius: 10px; }
   .menuGrid .burger__img {
     background-position: center;
-    background-size: cover;
     background-repeat: no-repeat;
-    margin: 1px; }
+    margin: -15px;
+    border: 2px solid black; }
     .menuGrid .burger__img.burger__img--burger1 {
       grid-column-start: 1;
       grid-column-end: 2;
       grid-row-start: 1;
-      grid-row-end: 4;
+      grid-row-end: 5;
       background-image: url(../media/burgerCheddar.jpg); }
     .menuGrid .burger__img.burger__img--burger2 {
       grid-column-start: 2;
       grid-column-end: 3;
       grid-row-start: 1;
-      grid-row-end: 4;
+      grid-row-end: 5;
       background-image: url(../media/burgerAmericana.jpg); }
     .menuGrid .burger__img.burger__img--burger3 {
       grid-column-start: 1;
       grid-column-end: 2;
-      grid-row-start: 5;
-      grid-row-end: 8;
+      grid-row-start: 6;
+      grid-row-end: 10;
       background-image: url(../media/burgerJamon.jpg); }
     .menuGrid .burger__img.burger__img--burger4 {
       grid-column-start: 2;
       grid-column-end: 3;
-      grid-row-start: 5;
-      grid-row-end: 8;
+      grid-row-start: 6;
+      grid-row-end: 10;
       background-image: url(../media/burgerBanada.jpg); }
     .menuGrid .burger__img.burger__img--burger5 {
       grid-column-start: 1;
       grid-column-end: 2;
-      grid-row-start: 9;
-      grid-row-end: 13;
+      grid-row-start: 11;
+      grid-row-end: 15;
       background-image: url(../media/burgerCriolla.jpg); }
     .menuGrid .burger__img.burger__img--burger6 {
       grid-column-start: 2;
       grid-column-end: 3;
-      grid-row-start: 9;
-      grid-row-end: 13;
+      grid-row-start: 11;
+      grid-row-end: 15;
       background-image: url(../media/burgerVeggie.jpg); }
   .menuGrid .\.burger__nombre {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*&.\.burger__nombre--nombre5{
-			padding: 14.56665px 0px 14.56665px 0px;
-		}
-		&.\.burger__nombre--nombre6{
-			padding: 14.56665px 0px 14.56665px 0px;
-		}*/ }
+    padding-bottom: 15px;
+    font-size: 20px; }
   .menuGrid .burger__nombre.burger__nombre--nombre1 {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 4;
-    grid-row-end: 5; }
+    grid-row-start: 5;
+    grid-row-end: 6; }
   .menuGrid .burger__nombre.burger__nombre--nombre2 {
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 4;
-    grid-row-end: 5; }
+    grid-row-start: 5;
+    grid-row-end: 6; }
   .menuGrid .burger__nombre.burger__nombre--nombre3 {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 8;
-    grid-row-end: 9; }
+    grid-row-start: 10;
+    grid-row-end: 11; }
   .menuGrid .burger__nombre.burger__nombre--nombre4 {
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 8;
-    grid-row-end: 9; }
+    grid-row-start: 10;
+    grid-row-end: 11; }
   .menuGrid .burger__nombre.burger__nombre--nombre5 {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 12;
-    grid-row-end: 13; }
+    grid-row-start: 15;
+    grid-row-end: 16; }
   .menuGrid .burger__nombre.burger__nombre--nombre6 {
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 12;
-    grid-row-end: 13; }
+    grid-row-start: 15;
+    grid-row-end: 16; }
 
 /**/
 /*Grid Locales*/
