--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -225,7 +225,7 @@ main div a img{
 		}
 	}
 }
-.menuGrid{
+.menuGrid15rows{
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(15, 10fr);
@@ -237,93 +237,138 @@ main div a img{
 	background-color: #a45d5d;
 	border: $border2px;
 	border-radius: 10px;
-	.burger__img{
+	.menu__img{
 		background-position: center;
 		background-repeat: no-repeat;
 		margin: -15px;
 		border: $border2px;
-		&.burger__img--burger1{
+		transition: all 100ms;
+		&:hover{
+			transform: scale(1.01);
+		}
+		&.menu__img--burger1{
 			grid-column-start: 1;
 			grid-column-end: 2;
 			grid-row-start: 1;
 			grid-row-end: 5;
 			background-image: url(../media/burgerCheddar.jpg);
 		}
-		&.burger__img--burger2{
+		&.menu__img--burger2{
 			grid-column-start: 2;
 			grid-column-end: 3;
 			grid-row-start: 1;
 			grid-row-end: 5;
 			background-image: url(../media/burgerAmericana.jpg);
 		}
-		&.burger__img--burger3{
+		&.menu__img--burger3{
 			grid-column-start: 1;
 			grid-column-end: 2;
 			grid-row-start: 6;
 			grid-row-end: 10;
 			background-image: url(../media/burgerJamon.jpg);
 		}
-		&.burger__img--burger4{
+		&.menu__img--burger4{
 			grid-column-start: 2;
 			grid-column-end: 3;
 			grid-row-start: 6;
 			grid-row-end: 10;
 			background-image: url(../media/burgerBanada.jpg);
 		}
-		&.burger__img--burger5{
+		&.menu__img--burger5{
 			grid-column-start: 1;
 			grid-column-end: 2;
 			grid-row-start: 11;
 			grid-row-end: 15;
 			background-image: url(../media/burgerCriolla.jpg);
 		}
-		&.burger__img--burger6{
+		&.menu__img--burger6{
 			grid-column-start: 2;
 			grid-column-end: 3;
 			grid-row-start: 11;
 			grid-row-end: 15;
 			background-image: url(../media/burgerVeggie.jpg);
 		}
+		&.menu__img--bebida1{
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 1;
+			grid-row-end: 5;
+			background-image: url(../media/pepsi.jpg);
+		}
+		&.menu__img--bebida2{
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 1;
+			grid-row-end: 5;
+			background-image: url(../media/sprite.jpg);
+		}
+		&.menu__img--bebida3{
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 6;
+			grid-row-end: 10;
+			background-image: url(../media/fanta.jpg);
+		}
+		&.menu__img--bebida4{
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 6;
+			grid-row-end: 10;
+			background-image: url(../media/toros.jpg);
+		}
+		&.menu__img--bebida5{
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 11;
+			grid-row-end: 15;
+			background-image: url(../media/aguagas.jpg);
+		}
+		&.menu__img--bebida6{
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 11;
+			grid-row-end: 15;
+			background-image: url(../media/aquarius.jpg);
+		}
+
 	}
-	.\.burger__nombre{
+	.menu__nombre{
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		padding-bottom: 15px;
 		font-size: 20px;
-	}
-	.burger__nombre{
-		&.burger__nombre--nombre1{
+		&.menu__nombre--burger1{
 			grid-column-start: 1;
 			grid-column-end: 2;
 			grid-row-start: 5;
 			grid-row-end: 6;
 		}
-		&.burger__nombre--nombre2{
+		&.menu__nombre--burger2{
 			grid-column-start: 2;
 			grid-column-end: 3;
 			grid-row-start: 5;
 			grid-row-end: 6;
 		}
-		&.burger__nombre--nombre3{
+		&.menu__nombre--burger3{
 			grid-column-start: 1;
 			grid-column-end: 2;
 			grid-row-start: 10;
 			grid-row-end: 11;
 		}
-		&.burger__nombre--nombre4{
+		&.menu__nombre--burger4{
 			grid-column-start: 2;
 			grid-column-end: 3;
 			grid-row-start: 10;
 			grid-row-end: 11;
 		}
-		&.burger__nombre--nombre5{
+		&.menu__nombre--burger5{
 			grid-column-start: 1;
 			grid-column-end: 2;
 			grid-row-start: 15;
 			grid-row-end: 16;
 		}
-		&.burger__nombre--nombre6{
+		&.menu__nombre--burger6{
 			grid-column-start: 2;
 			grid-column-end: 3;
 			grid-row-start: 15;
@@ -331,6 +376,90 @@ main div a img{
 		}
 	}
 }
+.menuGrid10rows{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(10, 1fr);
+	grid-row-gap: 0px;
+	grid-column-gap: 60px;
+	height: 155vh;
+	padding: 60px 60px 0px 60px;
+	margin: 45px 50px 50px 50px;
+	background-color: #a45d5d;
+	border: $border2px;
+	border-radius: 10px;
+	.menu__img{
+		background-position: center;
+		background-repeat: no-repeat;
+		margin: -15px;
+		border: $border2px;
+		transition: all 100ms;
+		&:hover{
+			transform: scale(1.01);
+		}
+		&.menu__img--acomp1{
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 1;
+			grid-row-end: 5;
+			background-image: url(../media/papas.jpg);
+		}
+		&.menu__img--acomp2{
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 1;
+			grid-row-end: 5;
+			background-image: url(../media/papasCheddar.jpg);
+		}
+		&.menu__img--acomp3{
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 6;
+			grid-row-end: 10;
+			background-image: url(../media/aros.jpg);
+		}
+		&.menu__img--acomp4{
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 6;
+			grid-row-end: 10;
+			background-image: url(../media/nuggets.jpg);
+		}
+	}
+	.menu__nombre{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding-bottom: 15px;
+		font-size: 20px;
+		&.menu__nombre--acomp1{
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 5;
+			grid-row-end: 6;
+		}
+		&.menu__nombre--acomp2{
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 5;
+			grid-row-end: 6;
+		}
+		&.menu__nombre--acomp3{
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 10;
+			grid-row-end: 11;
+		}
+		&.menu__nombre--acomp4{
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 10;
+			grid-row-end: 11;
+		}
+	}
+}
+
+
 /**/
 
 
